# backend/app/Http/Dtos/DataUnitDto.php
@@ -2,15 +2,6 @@
 
 namespace App\Http\Dtos;
 
-/**
- * @OA\Schema(
- *     schema="DataUnitDto",
- *     type="object",
- *     description="DataUnitDto schema",
- *     @OA\Property(property="NameUnit", type="string", description="Lokasi Kerja"),
- *     @OA\Property(property="Plan", type="string", nullable=true, description="Kode Plan untuk Lokasi Kerja")
- * )
- */
 class DataUnitDto
 {
     public $NameUnit;
